# ParakeetTranscription

./: README.md  build.sh  build_app.spec  install_service.sh  main.py  pyproject.toml  run.sh  setup.py  test_app.sh  whisper_flow.py  whisper_flow_app.py
