[project]
name = "parakeet-transcription"
version = "0.2.0"
description = "macOS menu bar app for real-time voice transcription — Parakeet/MLX on Apple Silicon, Whisper/CTranslate2 on Intel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "parakeet-mlx>=0.4.0",
    "faster-whisper>=1.0.0",
    "pyaudio>=0.2.14",
    "pyperclip>=1.11.0",
    "rumps>=0.4.0",
    "numpy>=1.26.0",
    "torch>=2.0.0",
    "onnxruntime>=1.23.2",
]
